[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "webnotes-scripts"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "1.35.49"
checkov = "^3.2.495"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
